format db search results

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -94,6 +94,11 @@
 .views-exposed-form .views-exposed-widget .form-submit {
 	margin-top: 0;
 }
+#views-exposed-form-databases-search-page-2 {
+	input {
+		width: 75%;
+	}
+}
 
 // DATABASE NODE TEMPLATE
 // -----------------------------------
