--- a/css/style.css
+++ b/css/style.css
@@ -7675,6 +7675,9 @@ body.admin-menu {
 .views-exposed-form .views-exposed-widget .form-submit {
   margin-top: 0; }
 
+#views-exposed-form-databases-search-page-2 input {
+  width: 75%; }
+
 .topic-list a {
   color: #333;
   display: inline;
