--- a/css/style.css
+++ b/css/style.css
@@ -7623,7 +7623,8 @@ body.admin-menu {
   padding: 1.5em 0;
   border-bottom: 1px solid #ececed; }
   .database-item h2, .database-item h3 {
-    font-size: 24px; }
+    font-size: 24px;
+    margin-top: 0; }
 
 .db-label {
   font-weight: bold; }
