format db search results

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -100,6 +100,9 @@
 	.views-widget-filter-field_description_value {
 		width: 50%;
 	}
+	.btn-primary {
+		background: $johnson-red;
+	}
 }
 
 // DATABASE NODE TEMPLATE
