--- a/css/style.css
+++ b/css/style.css
@@ -7679,7 +7679,10 @@ body.admin-menu {
 #views-exposed-form-databases-search-page-2 .views-widget-filter-field_description_value {
   width: 50%; }
 #views-exposed-form-databases-search-page-2 .btn-primary {
-  background: #b41b1d; }
+  background: #b41b1d;
+  border: 1px solid transparent; }
+#views-exposed-form-databases-search-page-2 .btn-primary:hover {
+  background: black; }
 
 .topic-list a {
   color: #333;
