--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -112,7 +112,7 @@
 // -----------------------------------------------------------
 
 .courselist-form {
-	select.form-control {
+	.form-select {
 	  height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
 	  padding: $padding-base-vertical $padding-base-horizontal;
 	  font-size: $font-size-base;
