--- a/css/style.css
+++ b/css/style.css
@@ -7330,7 +7330,7 @@ footer {
 .page-search .search-info {
   display: none; }
 
-.courselist-form select.form-control {
+.courselist-form .form-select {
   height: 34px;
   padding: 6px 12px;
   font-size: 14px;
@@ -7345,19 +7345,19 @@ footer {
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
-  .courselist-form select.form-control:focus {
+  .courselist-form .form-select:focus {
     border-color: #66afe9;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
-  .courselist-form select.form-control::-moz-placeholder {
+  .courselist-form .form-select::-moz-placeholder {
     color: #777777;
     opacity: 1; }
-  .courselist-form select.form-control:-ms-input-placeholder {
+  .courselist-form .form-select:-ms-input-placeholder {
     color: #777777; }
-  .courselist-form select.form-control::-webkit-input-placeholder {
+  .courselist-form .form-select::-webkit-input-placeholder {
     color: #777777; }
-  .courselist-form select.form-control[disabled], .courselist-form select.form-control[readonly], fieldset[disabled] .courselist-form select.form-control {
+  .courselist-form .form-select[disabled], .courselist-form .form-select[readonly], fieldset[disabled] .courselist-form .form-select {
     cursor: not-allowed;
     background-color: #eeeeee;
     opacity: 1; }
