--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -183,6 +183,34 @@
 	  > tbody + tbody {
 	    border-top: 2px solid $table-border-color;
 	  }
+
+	  // Add responsiveness
+	  @media screen and (max-width: $screen-xs-max) {
+	    width: 100%;
+	    margin-bottom: ($line-height-computed * 0.75);
+	    overflow-y: hidden;
+	    overflow-x: auto;
+	    -ms-overflow-style: -ms-autohiding-scrollbar;
+	    border: 1px solid $table-border-color;
+	    -webkit-overflow-scrolling: touch;
+
+	    // Tighten up spacing
+	    > .table {
+	      margin-bottom: 0;
+
+	      // Ensure the content doesn't wrap
+	      > thead,
+	      > tbody,
+	      > tfoot {
+	        > tr {
+	          > th,
+	          > td {
+	            white-space: nowrap;
+	          }
+	        }
+	      }
+	    }
+	  }
 }
 
 // BOOTSTRAP OVERRIDES
