--- a/css/johnson/_reserves.scss
+++ b/css/johnson/_reserves.scss
@@ -102,3 +102,9 @@
 	    }
 	  }
 }
+table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
+	background: $light-tan;
+}
+table.tablesorter thead tr th, table.tablesorter tfoot tr th {
+	background-color: inherit;
+}
