--- a/css/johnson/_reserves.scss
+++ b/css/johnson/_reserves.scss
@@ -103,7 +103,7 @@
 	  }
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-	background: $light-tan;
+	background: $pale-tan;
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	background-color: inherit;
