--- a/css/style.css
+++ b/css/style.css
@@ -7806,6 +7806,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   background: #efede9; }
 
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-  background-color: inherit; }
+  background-color: #ddd;
+  border: 0; }
 
 /*# sourceMappingURL=style.css.map */
