--- a/css/johnson/_reserves.scss
+++ b/css/johnson/_reserves.scss
@@ -106,6 +106,6 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 	background: $pale-tan;
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-	background-color: #ddd;
+	background-color: white;
 	border: 0;
 }
