--- a/css/johnson/_reserves.scss
+++ b/css/johnson/_reserves.scss
@@ -103,9 +103,11 @@
 	  }
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-	background: $pale-tan;
+	background-color: $pale-tan;
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	background-color: white;
-	border: 0;
+	border-left: 0;
+	border-right: 0;
+	border-top: 0;
 }
