--- a/css/style.css
+++ b/css/style.css
@@ -7803,10 +7803,12 @@ body.admin-menu {
           white-space: nowrap; } }
 
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-  background: #efede9; }
+  background-color: #efede9; }
 
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
   background-color: white;
-  border: 0; }
+  border-left: 0;
+  border-right: 0;
+  border-top: 0; }
 
 /*# sourceMappingURL=style.css.map */
