--- a/css/johnson/_reserves.scss
+++ b/css/johnson/_reserves.scss
@@ -110,3 +110,11 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	border: 0;
 	border-bottom: 3px solid $tan;
 }
+.reserve-items {
+	h3 {
+		margin: 2em 0 1em;
+	}
+}
+.block-ares {
+	margin-top: 1em;
+}
