--- a/css/johnson/_reserves.scss
+++ b/css/johnson/_reserves.scss
@@ -108,7 +108,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	background-color: white;
 	border: 0;
-	border-bottom: 3px solid $tan;
+	border-bottom: 3px solid $light-gray;
 }
 .reserve-items {
 	h3 {
