--- a/css/style.css
+++ b/css/style.css
@@ -7786,4 +7786,40 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 .block-ares {
   margin-top: 1em; }
 
+.btn {
+  border-radius: 0;
+  text-decoration: none; }
+
+.btn-jgsm,
+.btn-jgsm:active {
+  background: #b41b1d;
+  color: white; }
+  .btn-jgsm i,
+  .btn-jgsm:active i {
+    margin-left: .25em; }
+
+.btn-jgsm:hover {
+  background: black;
+  color: white; }
+
+.toplink {
+  text-align: right; }
+  .toplink i {
+    font-size: 90%;
+    margin-right: .25em; }
+
+#skiptocontent a {
+  padding: 6px;
+  position: absolute;
+  top: -40px;
+  left: 0px;
+  color: white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  border-bottom-right-radius: 8px;
+  background: transparent;
+  -webkit-transition: top 1s ease-out, background 1s linear;
+  transition: top 1s ease-out, background 1s linear;
+  z-index: 100; }
+
 /*# sourceMappingURL=style.css.map */
