--- a/css/johnson/_misc.scss
+++ b/css/johnson/_misc.scss
@@ -23,9 +23,10 @@
 // -------------------------
 .toplink {
 	text-align: right;
+	font-size: 14px;
 	i {
 		font-size: 90%;
-		margin-right: .25em;
+		margin-right: .3em;
 	}
 }
 
