--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -31,7 +31,7 @@
 	}
 }
 
-// LIST OF CONTENT WITH TAGS, like GUIDES
+// LIST OF CONTENT WITH TAGS, LIKE GUIDES
 // ----------------------------------------
 .content-list {
 	border-bottom: 1px solid $light-gray;
@@ -46,6 +46,18 @@
 		color: $dark-gray;
 	}
 }
+
+
+// STAFF LIST
+// -------------------------
+
+.staff-item {
+	padding: 0 0 1em 0;
+	h3 {
+		margin-top: 0;
+	}
+}
+
 
 // MEDIA QUERIES
 // -------------------------
