--- a/css/style.css
+++ b/css/style.css
@@ -7567,9 +7567,13 @@ body.admin-menu {
     color: #333; }
 
 .staff-item {
-  padding: 0 0 1em 0; }
+  padding: 0 0 2em 0; }
   .staff-item h3 {
     margin-top: 0; }
+
+.staff-title,
+.staff-email {
+  font-size: 18px; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
