--- a/css/style.css
+++ b/css/style.css
@@ -7571,9 +7571,13 @@ body.admin-menu {
   .staff-item h3 {
     margin-top: 0; }
 
-.staff-title,
-.staff-email {
+.staff-title {
   font-size: 16px; }
+
+.staff-email {
+  float: left;
+  font-size: 16px;
+  margin-right: .75em; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
