--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -43,6 +43,8 @@ p, li {
 img {
 	padding: 3px;
 	border: 1px solid $light-gray;
+	max-width: 100%;
+	height: auto;
 }
 .img-left {
 	text-align: center;
