format additional resources sidebar block

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -143,6 +143,17 @@
 	}
 }
 
+// ADDITIONAL RESOURCES BLOCK
+// -------------------------------
+#block-menu-block-4 {
+	margin-top: 3em;
+	h2 {
+		font-size: 14px;
+		margin: 0 0 .5em;
+		color: $medium-gray;
+		text-transform: uppercase;
+	}
+}
 
 
 // MEDIA QUERIES
