--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -160,6 +160,9 @@
 		color: white;
 		text-shadow: 2px 2px 0px #3f3f3f;
 	}
+	.hours {
+		font-size: 90%;
+	}
 }
 
 /* Medium devices (desktops, 992px and up) */
