--- a/css/style.css
+++ b/css/style.css
@@ -7214,7 +7214,10 @@ footer {
     margin-right: 5em;
     text-align: right;
     color: white;
-    text-shadow: 2px 2px 0px #3f3f3f; } }
+    text-shadow: 2px 2px 0px #3f3f3f; }
+
+  .hours {
+    font-size: 90%; } }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 1200px) {
   .navbar-brand,
