--- a/css/style.css
+++ b/css/style.css
@@ -7217,7 +7217,10 @@ footer {
     text-shadow: 2px 2px 0px #3f3f3f; }
 
   .hours {
-    font-size: 90%; } }
+    font-size: 90%; }
+
+  .nav > li > a {
+    padding: 4px; } }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 1200px) {
   .navbar-brand,
