--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -4,7 +4,7 @@
 .navbar-brand, .navbar-brand:hover {
 	font-size: 29px;
 	text-transform: uppercase;
-	margin: .5em 0 .25em 0;
+	margin: .5em 0 0 0;
 	float: none;
 	display: block;
 	text-decoration: none;
