--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -11,6 +11,7 @@
 	color: black;
 	padding: .25em 0;
 	line-height: 1em;
+	height: auto;
 }
 // .college-brand {
 // 	margin: 1em 0 0 0;
@@ -28,6 +29,7 @@
 	color: $dark-gray;
 	font-size: 18px;
 	font-style: italic;
+	margin-bottom: 1em;
 }
 .navbar {
 	.nav {
@@ -150,12 +152,14 @@
 		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
 		font-size: 34px;
 		margin-bottom: 0;
+		height: 50px;
 	}
 	.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
 		margin-left: 0;
 	}
 	.slogan {
 		margin-right: 5em;
+		margin-bottom: 0;
 		text-align: right;
 		color: white;
 		text-shadow: 2px 2px 0px #3f3f3f;
