--- a/css/style.css
+++ b/css/style.css
@@ -7125,12 +7125,14 @@ footer {
   text-decoration: none;
   color: black;
   padding: .25em 0;
-  line-height: 1em; }
+  line-height: 1em;
+  height: auto; }
 
 .slogan {
   color: #333;
   font-size: 18px;
-  font-style: italic; }
+  font-style: italic;
+  margin-bottom: 1em; }
 
 .navbar .nav {
   margin-top: 1em; }
@@ -7202,13 +7204,15 @@ footer {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
     font-size: 34px;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    height: 50px; }
 
   .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
     margin-left: 0; }
 
   .slogan {
     margin-right: 5em;
+    margin-bottom: 0;
     text-align: right;
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f; }
