--- a/css/style.css
+++ b/css/style.css
@@ -7125,8 +7125,7 @@ footer {
   text-decoration: none;
   color: black;
   padding: .25em 0;
-  line-height: 1em;
-  height: auto; }
+  line-height: 1em; }
 
 .slogan {
   color: #333;
