--- a/css/style.css
+++ b/css/style.css
@@ -7030,7 +7030,7 @@ img {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  padding: 3em 0; }
+  padding: 3em 10px; }
   @media (min-width: 768px) {
     .main-text-2col {
       float: left;
@@ -7114,7 +7114,10 @@ footer {
     background-size: cover;
     margin-bottom: 0;
     border-radius: 0;
-    min-height: 170px; } }
+    min-height: 170px; }
+
+  .main-text-2col {
+    padding: 3em 0; } }
 /* Medium devices (desktops, 992px and up) */
 .navbar-brand, .navbar-brand:hover {
   font-size: 29px;
