--- a/css/style.css
+++ b/css/style.css
@@ -7049,10 +7049,10 @@ img {
   margin: 0;
   background: #cbc3b7;
   border: none;
-  padding: 20px; }
+  padding: 20px 0; }
   .page-header h1 {
     color: white;
-    font-size: 48px;
+    font-size: 36px;
     margin: 0;
     line-height: 1;
     font-family: "pf_dintext_proregular", arial, san-serif; }
@@ -7117,7 +7117,12 @@ footer {
     min-height: 170px; }
 
   .main-text-2col {
-    padding: 3em 0; } }
+    padding: 3em 0; }
+
+  .page-header {
+    padding: 20px; }
+    .page-header h1 {
+      font-size: 48px; } }
 /* Medium devices (desktops, 992px and up) */
 .navbar-brand, .navbar-brand:hover {
   font-size: 29px;
