--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -37,6 +37,11 @@ h2.block-title {
 p, li {
 	font-size: 18px;
 }
+li {
+	i {
+		margin-left: .5em;
+	}
+}
 
 // Images
 // -------------------------
