--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -51,6 +51,12 @@
 }
 .main-text {
 	padding: 3em 0;
+	li {
+		i {
+			margin-left: .5em;
+			font-size: 75%;
+		}
+	}
 }
 .main-content {
 	background: white;
