--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -73,6 +73,9 @@
 		line-height: 1;
 		font-family: $font-family-sans-serif;
 	}
+	.navbar-toggle {
+		margin: 0;
+	}
 }
 .breadcrumb {
 	background: inherit;
