--- a/css/style.css
+++ b/css/style.css
@@ -7018,7 +7018,7 @@ img {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  padding: 3em 0; }
+  padding: 0; }
   @media (min-width: 768px) {
     .sidebar {
       float: left;
@@ -7126,7 +7126,10 @@ footer {
   .page-header {
     padding: 20px; }
     .page-header h1 {
-      font-size: 48px; } }
+      font-size: 48px; }
+
+  .sidebar {
+    padding: 3em 0; } }
 /* Medium devices (desktops, 992px and up) */
 .navbar-brand, .navbar-brand:hover {
   font-size: 29px;
