--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -144,7 +144,7 @@
 // ADDITIONAL RESOURCES BLOCK
 // -------------------------------
 #block-menu-block-4 {
-	margin-top: 3em;
+	margin-top: 1.5em;
 	h2 {
 		font-size: 14px;
 		margin: 0 0 .5em 10px;
@@ -202,6 +202,9 @@
 		.form-group {
 			width: 75%;
 		}
+	}
+	#block-menu-block-4 {
+		margin-top: 3em;
 	}
 }
 
