--- a/css/style.css
+++ b/css/style.css
@@ -7348,7 +7348,7 @@ footer {
   margin: 0 0 .25em; }
 
 #block-menu-block-4 {
-  margin-top: 3em; }
+  margin-top: 1.5em; }
   #block-menu-block-4 h2 {
     font-size: 14px;
     margin: 0 0 .5em 10px;
@@ -7376,7 +7376,10 @@ footer {
     margin: 0 0 .5em 0; }
 
   .single-search .form-group {
-    width: 75%; } }
+    width: 75%; }
+
+  #block-menu-block-4 {
+    margin-top: 3em; } }
 /* Medium devices (desktops, 992px and up) */
 .resource-tabs .nav-tabs {
   border-bottom: 0;
