--- a/css/style.css
+++ b/css/style.css
@@ -7676,6 +7676,11 @@ body.admin-menu {
     font-size: 24px;
     margin-top: 0; }
 
+.faq-item {
+  padding: 1em 0; }
+  .faq-item h3 {
+    font-size: 18px; }
+
 .db-label {
   font-weight: bold; }
 
@@ -7688,9 +7693,6 @@ body.admin-menu {
   .db-topics .label-topic {
     color: #333333;
     font-size: 14px; }
-
-.faq-item h3 {
-  font-size: 18px; }
 
 .page-db-search #db_search {
   width: 75%;
