--- a/css/style.css
+++ b/css/style.css
@@ -7677,9 +7677,12 @@ body.admin-menu {
     margin-top: 0; }
 
 .faq-item {
-  padding: 1em 0; }
+  padding: 1em 0 .5em 0; }
   .faq-item h3 {
     font-size: 18px; }
+
+.faq-item:first-child {
+  padding-top: 1.5em; }
 
 .db-label {
   font-weight: bold; }
