--- a/css/style.css
+++ b/css/style.css
@@ -7622,7 +7622,8 @@ body.admin-menu {
 .content-list {
   border-bottom: 1px solid #ececed;
   margin: 1em 0;
-  overflow: hidden; }
+  overflow: hidden;
+  padding-bottom: .5em; }
   .content-list h4 {
     font-weight: normal;
     margin: 0 .5em .75em 0;
