--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -37,6 +37,7 @@
 	border-bottom: 1px solid $light-gray;
 	margin: 1em 0;
 	overflow: hidden;
+	padding-bottom: .5em;
 	h4 {
 		font-weight: normal;
 		margin: 0 .5em .75em 0;
