add rotating images

--- a/css/style.css
+++ b/css/style.css
@@ -7131,7 +7131,7 @@ footer {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover !important;
     margin-bottom: 0;
     border-radius: 0;
     min-height: 170px; }
