--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -149,7 +149,7 @@ footer {
 /* Small devices (tablets, 768px and up) */
 @media (min-width: $screen-sm) {
 	.image-wrapper {
-		background: url("../img/banner.jpg") no-repeat center;
+		background: url("../img/banner.jpg") no-repeat center bottom;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
