--- a/css/style.css
+++ b/css/style.css
@@ -7127,7 +7127,7 @@ footer {
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .image-wrapper {
-    background: url("../img/banner.jpg") no-repeat center;
+    background: url("../img/banner.jpg") no-repeat center bottom;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
