add rotating images

--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -157,6 +157,7 @@ footer {
 		margin-bottom: 0;
 		border-radius: 0;
 		min-height: 170px;
+		background-position: center bottom !important;
 	}
 	.main-text-2col {
 		padding: 3em 0;
