format home page features

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -60,7 +60,7 @@
 		}
 	}
 	p {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	h3 {
 		font-size: 16px;
@@ -70,6 +70,9 @@
 	h4 {
 		font-size: 22px;
 	}
+}
+.feature-img {
+	margin-bottom: 1em;
 }
 
 // BOOKS AND JOURNALS SEARCH 
