format home page features

--- a/css/style.css
+++ b/css/style.css
@@ -7301,7 +7301,8 @@ footer {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
-  padding-right: 15px; }
+  padding-right: 15px;
+  margin-bottom: 2em; }
   @media (min-width: 768px) {
     .feature {
       float: left;
