--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -84,9 +84,13 @@
 			font-size: 16px;
 			padding: 10px 15px;
 			display: block;
+			font-weight: normal;
 		}
 		a:hover {
 			text-decoration: none;
+		}
+		.active {
+			font-weight: 700;
 		}
 	}
 	.nav > li > a {
