--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -16,7 +16,9 @@
 	height: auto;
 }
 .slogan {
-	color: $dark-gray;
+	// color: $dark-gray;
+	color: white;
+	text-shadow: 2px 2px 0px #3f3f3f;
 	font-size: 18px;
 	font-style: italic;
 	margin-bottom: 1em;
@@ -152,8 +154,8 @@
 		margin-right: 5em;
 		margin-bottom: 0;
 		text-align: right;
-		color: white;
-		text-shadow: 2px 2px 0px #3f3f3f;
+		// color: white;
+		// text-shadow: 2px 2px 0px #3f3f3f;
 	}
 	.hours {
 		font-size: 90%;
