--- a/css/style.css
+++ b/css/style.css
@@ -6981,6 +6981,17 @@ img {
   .caption {
     color: #333333; } }
 /* Medium devices (desktops, 992px and up) */
+.image-wrapper {
+  background: url("../img/banner/4.jpg") no-repeat center bottom;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover !important;
+  margin-bottom: 0;
+  border-radius: 0;
+  min-height: 170px;
+  background-position: center bottom !important; }
+
 .jumbotron {
   background: #4d4e53;
   color: white;
@@ -7126,17 +7137,6 @@ footer {
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  .image-wrapper {
-    background: url("../img/banner.jpg") no-repeat center bottom;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover !important;
-    margin-bottom: 0;
-    border-radius: 0;
-    min-height: 170px;
-    background-position: center bottom !important; }
-
   .main-text-2col {
     padding: 3em 0; }
 
