make link color consistent on home page

--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -86,11 +86,11 @@
 				margin: 0 0 .5em;
 			}
 			a {
-				color: $dark-gray;
+				// color: $dark-gray;
 				i {
 					font-size: 75%;
 					margin-left: .5em;
-					color: $johnson-red;
+					color: $medium-gray;
 				}
 			}
 		}
