make link color consistent on home page

--- a/css/style.css
+++ b/css/style.css
@@ -7536,6 +7536,8 @@ footer {
   .popular-topics a {
     font-size: 16px;
     color: #333333; }
+  .popular-topics .all-topics {
+    color: #b41b1d; }
 
 .see-all {
   margin: 2em 0 0 0; }
