make link color consistent on home page

--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -156,9 +156,12 @@
 		font-size: 16px;
 		color: $dark-gray;
 	}
-	.all-topics {
+}
+.all-topics {
+	a {
 		color: $johnson-red;
 	}
+	
 }
 
 // See all buttons
