make link color consistent on home page

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -53,11 +53,10 @@
 		margin: 0 1em 1em 0;
 	}
 	a {
-		color: $dark-gray;
 		i {
 			font-size: 75%;
-			margin-left: .5em;
-			color: $johnson-red;
+			margin-left: .35em;
+			color: $medium-gray;
 		}
 	}
 	p {
