--- a/css/style.css
+++ b/css/style.css
@@ -7540,6 +7540,13 @@ footer {
 .all-topics a {
   color: #b41b1d; }
 
+.all-link {
+  color: #b41b1d; }
+  .all-link i {
+    font-size: 75%;
+    margin-left: .5em;
+    color: #999999; }
+
 .see-all {
   margin: 2em 0 0 0; }
 
