--- a/css/style.css
+++ b/css/style.css
@@ -7541,7 +7541,8 @@ footer {
   color: #b41b1d; }
 
 .all-link {
-  color: #b41b1d; }
+  color: #b41b1d;
+  font-size: 16px; }
   .all-link i {
     font-size: 75%;
     margin-left: .5em;
