--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -26,9 +26,8 @@
 		padding: 5px 5px 5px 10px;
 	}
 	a {
-		color: black;
 		i {
-			color: $johnson-red;
+			color: $medium-gray;
 			font-size: 75%;
 			margin-left: .5em;
 		}
