format login page

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -108,6 +108,13 @@
 	}
 }
 
+
+.block-simplesamlphp-auth {
+	p {
+		margin-bottom: 3em;
+	}
+}
+
 // BOOTSTRAP OVERRIDES
 // -------------------------
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
