--- a/css/style.css
+++ b/css/style.css
@@ -7537,7 +7537,8 @@ footer {
     margin: 0 5px 10px 0 !important; }
   .popular-topics a {
     font-size: 16px;
-    color: #333333; }
+    color: #333333;
+    text-decoration: none; }
 
 .all-topics a {
   color: #b41b1d; }
