remove underline from topic links

--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -163,6 +163,9 @@
 		color: $johnson-red;
 		text-decoration: underline;
 	}
+	a:hover {
+		color: black;
+	}
 }
 .all-link {
 	color: $johnson-red;
