--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -56,6 +56,7 @@
 	.label-topic {
 		color: $dark-gray;
 		font-size: 14px;
+		text-decoration: none;
 	}
 }
 // page search box width; NOTE THIS REMOVES AUTOCOMPLETE SPINNER (due background image and padding/height rules)
