remove underline from topic links

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -138,6 +138,7 @@
 		font-size: 14px;
 		background: $light-gray;
 		font-weight: normal;
+		text-decoration: none;
 	}
 	a:hover {
 		text-decoration: none;
