--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -171,6 +171,7 @@
 		padding: 6px 12px;
 		text-transform: capitalize;
 		font-size: 18px;
+		text-decoration: none;
 	}
 	a:hover {
 		background: black;
