--- a/css/style.css
+++ b/css/style.css
@@ -7231,6 +7231,8 @@ footer {
   font-weight: 700; }
 .sidebar li {
   font-size: 16px; }
+.sidebar a {
+  text-decoration: none; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
