remove underline from topic links

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -16,6 +16,7 @@
 	background: $light-gray;
 	font-weight: normal;
 	font-size: 12px;
+	text-decoration: none;
 }
 .label-topic:hover,
 .label-topic:active {
