--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -119,6 +119,7 @@
 // -------------------------
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
 	background: $johnson-red;
+	text-decoration: none;
 }
 .nav-pills > li > a {
 	border-radius: 0;
