--- a/css/style.css
+++ b/css/style.css
@@ -7353,7 +7353,8 @@ footer {
   margin-bottom: 3em; }
 
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-  background: #b41b1d; }
+  background: #b41b1d;
+  text-decoration: none; }
 
 .nav-pills > li > a {
   border-radius: 0; }
