--- a/css/style.css
+++ b/css/style.css
@@ -7216,7 +7216,8 @@ footer {
     font-size: 16px;
     padding: 10px 15px;
     display: block;
-    font-weight: normal; }
+    font-weight: normal;
+    text-decoration: none; }
   .sidebar .block-title a:hover {
     text-decoration: none; }
   .sidebar .block-title .active {
@@ -7231,8 +7232,6 @@ footer {
   font-weight: 700; }
 .sidebar li {
   font-size: 16px; }
-.sidebar a {
-  text-decoration: none; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
