--- a/css/style.css
+++ b/css/style.css
@@ -6907,6 +6907,9 @@ button.close {
     float: right;
     width: 100%; }
 
+.search-collapse.collapse {
+  display: none; }
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .search-box .btn {
@@ -6914,7 +6917,10 @@ button.close {
     display: none; }
 
   .header-search form {
-    width: 40%; } }
+    width: 40%; }
+
+  .search-collapse.collapse {
+    display: block; } }
 /* Medium devices (desktops, 992px and up) */
 body {
   font-family: "pf_dintext_proregular", arial, san-serif;
