move search box into header

--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -62,9 +62,9 @@
 		width: 100%;
 	}
 }
-.search-collapse.collapse {
-	display: none;
-}
+// .search-collapse.collapse {
+// 	display: none;
+// }
 
 
 // MEDIA QUERIES
@@ -96,9 +96,9 @@
 			width: 40%;
 		}
 	}
-	.search-collapse.collapse {
-		display: block;
-	}
+	// .search-collapse.collapse {
+	// 	display: block;
+	// }
 }
 
 /* Medium devices (desktops, 992px and up) */
