--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -169,7 +169,7 @@
 		text-align: center;
 		vertical-align: middle;
 		padding: 6px 12px;
-		text-transform: capitalize;
+		// text-transform: capitalize;
 		font-size: 18px;
 		text-decoration: none;
 	}
