remove uppercaseness from connect button

--- a/css/style.css
+++ b/css/style.css
@@ -7810,6 +7810,10 @@ body.admin-menu {
   color: white;
   text-decoration: none; }
 
+.connectlink i {
+  font-size: 75px;
+  margin-left: .5em; }
+
 .courselist-form .form-select {
   height: 34px;
   padding: 6px 12px;
