remove uppercaseness from connect button

--- a/css/style.css
+++ b/css/style.css
@@ -7811,7 +7811,7 @@ body.admin-menu {
   text-decoration: none; }
 
 .connectlink i {
-  font-size: 75px;
+  font-size: 75%;
   margin-left: .5em; }
 
 .courselist-form .form-select {
