--- a/css/style.css
+++ b/css/style.css
@@ -6980,15 +6980,10 @@ img {
     color: #333; } }
 /* Medium devices (desktops, 992px and up) */
 .image-wrapper {
-  background: url("../img/banner/3.jpg") no-repeat center bottom;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover !important;
+  background: #686868;
   margin-bottom: 0;
   border-radius: 0;
-  min-height: 170px;
-  background-position: center bottom !important; }
+  min-height: 170px; }
 
 .jumbotron {
   background: #4d4e53;
@@ -7144,7 +7139,15 @@ footer {
       font-size: 48px; }
 
   .sidebar {
-    padding: 3em 0; } }
+    padding: 3em 0; }
+
+  .image-wrapper {
+    background: url("../img/banner/3.jpg") no-repeat center bottom;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover !important;
+    background-position: center bottom !important; } }
 /* Medium devices (desktops, 992px and up) */
 .navbar-brand, .navbar-brand:hover {
   font-size: 29px;
